@@ -1,11 +1,14 @@
 <events COMPLETE="Y">
-  <event id="1140582660186" title="more test" alarm="Y" active="N" memo="a message" category="" startDate="2006-02-22" endDate="2007-02-22" time="13:50:00" eventType="hourly" macroName="" filter="undefined">
+  <event id="1140582660186" title="more test" alarm="Y" active="Y" memo="a message" category="" startDate="2006-02-22" endDate="2007-02-22" time="13:50:00" eventType="hourly" macroName="" filter="undefined">
     <pattern recur="2" />
   </event>
   <event id="1162291009102" title="hj" active="N" alarm="N" memo="" category="" startDate="2006-10-29" endDate="2007-10-29" time="21:36:00" eventType="weekly" macroName="watering" extra="WATER_FRONT_LAWN" extra2="1800" filter="">
     <pattern sun="0" sat="0" fri="0" thu="0" wed="0" tue="0" mon="0" recur="1" />
   </event>
   <event id="1162291052626" title="h" active="N" alarm="N" memo="tu" category="" startDate="2006-10-29" endDate="2007-10-29" time="21:37:00" eventType="weekly" macroName="watering" extra="WATER_FRONT_LAWN" extra2="1800" filter="">
+    <pattern sun="0" sat="0" fri="0" thu="0" wed="0" tue="0" mon="0" recur="1" />
+  </event>
+  <event id="1166793541160" title="rt" active="N" alarm="N" memo="u" category="" startDate="2006-12-17" endDate="2007-12-17" time="00:18:00" eventType="weekly" macroName="watering" extra="WATER_FRONT_LAWN" extra2="1800" filter="">
     <pattern sun="0" sat="0" fri="0" thu="0" wed="0" tue="0" mon="0" recur="1" />
   </event>
 </events>
