@@ -1,4 +1,4 @@
-#Wed Dec 20 18:49:25 EST 2006
+#Sat Dec 23 00:24:30 EST 2006
 major_version=1.6b
-minor_version=15
+minor_version=16
 app_name=eLife
